[tool.poetry]
name = "fake_api"
version = "0.1.0"
description = ""
authors = ["ChrisScarred <scarred.chris@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
fastapi = "^0.65.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
